# fcitx5-lotus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  fcitx5-vmk-server.cpp  flake.nix  org.fcitx.Fcitx5.Addon.Vmk.metainfo.xml.in
.github/workflows/: build.yml  ubuntu-dev-build.yml  ubuntu-release-build.yml
AUR/: PKGBUILD  fcitx5-vmk.install
bamboo/: bamboo-c.go
docs/: fcitx5-vmk-server@.service  user-vmk.conf
fcitx5-vmk/src/: vmk.cpp
misc/: CMakeLists.txt
nix/modules/nixos/fcitx5-vmk/: default.nix
po/: fcitx5-lotus.pot  fcitx5-vmk.pot  vi.po
server/: CMakeLists.txt  lotus-server.cpp
src/: CMakeLists.txt  lotus-config.h  lotus.cpp  vmk-config.h  vmk.cpp
